k8s/deployment-wi-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: sc-sample-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc-sample
  template:
    metadata:
      labels:
        app: sc-sample
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: sc-account-79bfdfb1-54f2-4b58-9bdf-5545c12b4793
      containers:
      - name: raw-linux
        image: alpine
        command: ["/bin/sh", "-c"]
        args: ["printenv && sleep infinity"]
      restartPolicy: Always
