k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
